--- a/login.css
+++ b/login.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('/images/bg3.jpg');
+  background-image: url('/Budget-tracker/images/bg3.jpg');
   font-family: Arial, sans-serif;
 }
   
