Modified some files

--- a/signup.css
+++ b/signup.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('/Budget-tracker/images/bg4.jpg');
+  background-image: url('/images/bg1.jpg');
   font-family: Arial, sans-serif;
 }
 
